<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jonniewanathan.sudoku.SettingsActivity"
    android:orientation="vertical">


    <Switch
        android:id="@+id/auto_hint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:text="@string/auto_hint"/>

    <Switch
        android:id="@+id/music"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        android:text="@string/music"/>

    <Switch
        android:id="@+id/sound"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:text="@string/sound"/>
</LinearLayout>
