<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jonniewanathan.sudoku.MainMenu"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorLightGrey">

    <Button
        android:id="@+id/load_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_game"
        android:clickable="true"
        android:layout_marginBottom="20dp"
        android:padding="5dp"
        android:background="@drawable/border"/>
    <Button
        android:id="@+id/new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:clickable="true"
        android:layout_marginBottom="20dp"
        android:padding="5dp"
        android:background="@drawable/border"/>

    <Button
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:clickable="true"
        android:layout_marginBottom="20dp"
        android:padding="5dp"
        android:background="@drawable/border"/>


</LinearLayout>
